<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff">

        <!-- Question 1 text -->
        <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal">
            <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textSize="18dp" android:text="@string/q1" android:layout_span="5"
                    android:padding="18dip"
                    android:textColor="#000000"/>
        </TableRow>

        <!-- Question 1 options -->
        <TableRow
                android:id="@+id/tableRow1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <RadioGroup
                    android:id="@+id/q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" >
                <RadioButton
                        android:id="@+id/answer1A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q1_optionA"
                        android:tag="@string/q1_ans"/>
                <RadioButton
                        android:id="@+id/answer1B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q1_optionB"
                        android:tag="@string/q1_ans"/>
                <RadioButton
                        android:id="@+id/answer1C"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q1_optionC"
                        android:tag="@string/q1_ans"/>
            </RadioGroup>
        </TableRow>

        <!-- Question 2 text -->
        <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal">
            <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textSize="18dp" android:text="@string/q2"  android:layout_span="5"
                    android:padding="18dip"
                    android:textColor="#000000"/>
        </TableRow>

        <!-- Question 2 options -->
        <TableRow
                android:id="@+id/tableRow2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <RadioGroup
                    android:id="@+id/q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" >
                <RadioButton
                        android:id="@+id/answer2A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q2_optionA"
                        android:tag="@string/q2_ans"/>
                <RadioButton
                        android:id="@+id/answer2B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q2_optionB"
                        android:tag="@string/q2_ans"/>
                <RadioButton
                        android:id="@+id/answer2C"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q2_optionC"
                        android:tag="@string/q2_ans"/>
            </RadioGroup>
        </TableRow>

        <!-- Question 3 text -->
        <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal">
            <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textSize="18dp" android:text="@string/q3"  android:layout_span="5"
                    android:padding="18dip"
                    android:textColor="#000000"/>
        </TableRow>

        <!-- Question 3 options -->
        <TableRow
                android:id="@+id/tableRow3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <RadioGroup
                    android:id="@+id/q3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" >
                <RadioButton
                        android:id="@+id/answer3A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q3_optionA"
                        android:tag="@string/q3_ans"/>
                <RadioButton
                        android:id="@+id/answer3B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q3_optionB"
                        android:tag="@string/q3_ans"/>
                <RadioButton
                        android:id="@+id/answer3C"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/q3_optionC"
                        android:tag="@string/q3_ans"/>
            </RadioGroup>
        </TableRow>

        <!-- Submit button -->
        <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal">
            <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="Submit"
                    />
        </TableRow>

    </TableLayout>
</ScrollView>