<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:background="#2f050507"
    android:paddingRight="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nodeValue"
        android:id="@+id/tvNodeValue"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nodeNext"
        android:id="@+id/tvNodeNext"
        android:layout_below="@+id/tvNodeValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nodeValueDigit"
        android:id="@+id/tvNodeValueDigit"
        android:layout_alignTop="@+id/tvNodeValue"
        android:layout_toRightOf="@+id/tvNodeValue"
        android:layout_toEndOf="@+id/tvNodeValue"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="15dp" />

</RelativeLayout>
